--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -1,7 +1,9 @@
+---
+
 - name: copy and unzip binary
   unarchive:
     src: "{{ loki_archive_src }}/{{ item }}-linux-amd64.zip"
-    remote_src: yes
+    remote_src: "{{ not loki_distribute_binaries_via_localhost }}"
     dest: /usr/local/bin
     owner: "{{ loki_system_user }}"
     group: "{{ loki_system_group }}"
@@ -10,3 +12,5 @@
 
 - name: rename new binary
   command: mv /usr/local/bin/{{ item }}-linux-amd64 /usr/local/bin/{{ item }}
+
+...
