Improves user configuration

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -2,16 +2,17 @@
 
 - include_tasks: vars.yml
 
+- include_tasks: preflight.yml
+
 - name: create loki system group
   group:
     name: "{{ loki_system_group }}"
-    system: true
     state: present
+  when: loki_system_group != "root"
 
 - name: create loki system user
   user:
     name: "{{ loki_system_user }}"
-    system: true
     shell: "/usr/sbin/nologin"
     group: "{{ loki_system_group }}"
     createhome: false
