--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,10 +1,10 @@
 ---
 
 - name: restart loki
-  systemd:
-    daemon_reload: true
-    enabled: true
+  ansible.builtin.systemd_service:
     name: loki
+    daemon_reload: yes
+    enabled: yes
     state: restarted
 
 ...
