--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -1,7 +1,7 @@
 ---
 
 - name: copy and unzip binary
-  unarchive:
+  ansible.builtin.unarchive:
     src: "{{ loki_archive_src }}/{{ item }}-linux-amd64.zip"
     remote_src: "{{ not loki_distribute_binaries_via_localhost }}"
     dest: /usr/local/bin
@@ -11,6 +11,6 @@
   notify: restart loki
 
 - name: rename new binary
-  command: mv /usr/local/bin/{{ item }}-linux-amd64 /usr/local/bin/{{ item }}
+  ansible.builtin.command: mv /usr/local/bin/{{ item }}-linux-amd64 /usr/local/bin/{{ item }}
 
 ...
