--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -4,13 +4,13 @@
 
 - ansible.builtin.include_tasks: preflight.yml
 
-- name: create loki system group
+- name: Create loki system group
   ansible.builtin.group:
     name: "{{ loki_system_group }}"
     state: present
   when: loki_system_group != "root"
 
-- name: create loki system user
+- name: Create loki system user
   ansible.builtin.user:
     name: "{{ loki_system_user }}"
     shell: "/usr/sbin/nologin"
@@ -18,21 +18,20 @@
     createhome: false
   when: loki_system_user != "root"
 
-- name: get current loki version
+- name: Get current loki version
   ansible.builtin.shell: loki --version | head -n1 | cut -d " " -f 3
   register: loki_current_version
   changed_when: false
 
 - block:
-  - name: download files to localhost
-    ansible.builtin.include_tasks: local_download.yml
+  - ansible.builtin.include_tasks: local_download.yml
     loop: "{{ loki_binaries }}"
     when: loki_distribute_binaries_via_localhost
   - ansible.builtin.include_tasks: install.yml
     loop: "{{ loki_binaries }}"
   when: loki_current_version.stdout != loki_version
 
-- name: configure loki
+- name: Generate configuration file
   ansible.builtin.template:
     src: loki.yml.j2
     dest: /etc/loki.yml
@@ -42,7 +41,7 @@
   notify:
     - restart loki
 
-- name: create systemd service unit
+- name: Generate systemd service unit
   ansible.builtin.template:
     src: loki.service.j2
     dest: /etc/systemd/system/loki.service
