--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -37,6 +37,14 @@
 
   when: loki_current_version.stdout != loki_version
 
+- name: Configure data directory
+  ansible.builtin.file:
+    path: /var/lib/loki
+    state: directory
+    owner: "{{ loki_system_user }}"
+    group: "{{ loki_system_group }}"
+    mode: ug=rwx,o=
+
 - name: Generate configuration file
   ansible.builtin.template:
     src: loki.yml.j2
