--- a/tasks/vars.yml
+++ b/tasks/vars.yml
@@ -28,4 +28,26 @@
   ansible.builtin.set_fact:
     loki_binaries_platform_suffix: linux-{{ _architectures[ansible_architecture] }}
 
+- name: Aggregate config file contents from variables
+  ansible.builtin.set_fact:
+    loki_config_file_contents:
+
+      auth_enabled: "{{ loki_auth_enabled }}"
+
+      server:
+        http_listen_port: "{{ loki_server_http_listen_port }}"
+        http_listen_address: "{{ loki_server_http_listen_address }}"
+        log_level: "{{ loki_log_level }}"
+
+      ingester: "{{ loki_ingester }}"
+
+      schema_config:
+        configs: "{{ loki_schema_configs }}"
+
+      storage_config: "{{ loki_storage_config }}"
+
+      table_manager:
+        retention_deletes_enabled: true
+        retention_period: "{{ loki_data_retention_period }}"
+
 ...
