--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,23 +1,21 @@
 ---
+
 galaxy_info:
-  author: Lex Rivera
-  description: Loki role
-#  company:
-  license: MIT
-  min_ansible_version: 1.10
-  #
+  role_name: loki
+  namespace: funkyfuture
+  author: Frank Sachsenheim
+  description: Deploy loki, the log aggregator
+
+  license: GPL-3.0-only
+  min_ansible_version: "2.1"
+
   platforms:
-  - name: Ubuntu
-    versions:
-    - all
-  - name: Debian
-    versions:
-      - all
-  - name: RedHat
-    versions:
-      - all
-  categories:
-    - system
+    - name: GenericLinux
 
-dependencies: []
+  galaxy_tags:
+    - grafana
+    - logging
+    - loki
+    - monitoring
 
+...
